# rsslide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rsconstruct.toml  rsslide.toml  rsslide.toml.example
doc/: code-highlighting.md  marp-comparison.md
docs/: code-highlighting.md
examples/: alignment.yaml  demo.yaml  svg-diagrams.yaml  three-column-bullets.yaml
marp/: 00_title.md  01_tcp_ip.md  02_network_components.md  03_http.md  04_dns_deep_dive.md  05_network_security_basics.md  06_socket_programming.md  07_network_troubleshooting.md  08_modern_networking.md  alignment.md  bullets-and-code.md  bullets.md  columns-and-bullets.md  demo.md  headings.md  long-content.md  svg-diagrams.md  tables.md  three-column-bullets.md  two-column-bullets.md
scripts/: compare_pdfs.py  yaml2pdf.sh
src/: assets.rs  config.rs  main.rs  model.rs  parser.rs
src/exporter/: mod.rs  pdf.rs  pptx.rs
src/importer/: marp.rs
src/utils/: css_vars.rs  mod.rs
yaml/: bullets-and-code.yaml  bullets.yaml  columns-and-bullets.yaml  demo.yaml  headings.yaml  long-content.yaml  tables.yaml  two-column-bullets.yaml
