[package]
name = "rsslide"
version = "0.1.1"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "The ultimate slide builder"
license = "MIT"
repository = "https://github.com/veltzer/rsslide"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
printpdf = { version = "0.9", features = ["svg"] }
tera = "1"
zip = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
